@@ -1536,8 +1536,9 @@
 
 2013-08-09  Cedric Bail
 
-        * Add support for URL in Elm_Image with the following new smart callback :
-	"download,start", "download,progress", "download,done", "download,error".
+        * Add support for URL in Elm_Image with the following new smart
+        callback : "download,start", "download,progress", "download,done",
+        "download,error".
 
 2013-08-10  ChunEon Park (Hermet)
 
@@ -1550,4 +1551,10 @@
 
 2013-08-12  Cedric Bail
 
-	* Add URL support to Elm_Photocam with the same callback as URL suport in Elm_Image.
+        * Add URL support to Elm_Photocam with the same callback as URL suport
+        in Elm_Image.
+
+2013-08-12  ChunEon Park (Hermet)
+
+        * Mapbuf: Ensure that content size calculation is correctly finished
+        because the mapbuf is willing to block the size calculation forcely.
